--- a/contactadmin.html
+++ b/contactadmin.html
@@ -57,7 +57,7 @@
                     <div >
                         
                         <input type="submit" class="btn text-white bold" value="Request Access" onclick="alert('Access requested')">
-                          <input type="hidden" name="_next" value="https://balabajoelrio.github.io/Test-Live-Repo/">
+                          <input type="hidden" name="_next" value="https://balabajoelrio.github.io/SparkPlug-Foundation-Inc./">
                           <input type="hidden" name="_autoresponse" value="Wait for your admin to contact you to the same email you use.">
                           <input type="hidden" name="_template" value="table">
                     </div>
